prelimanry completede version